add css files and add main tag in index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عنوان من</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <title>فروشگاه من</title>
 </head>
 <body>
-    <div>
-        
+    <div class="wrapper">
+        <header class="header">
+            <div class="topinfo">info</div>
+            <div class="logo"></div>
+            <nav class="mainnav"></nav>
+
+        </header>
+
+        <main></main>
+
+        <footer></footer>
+
     </div>
 </body>
 </html>
