--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/fontiran.css">
     <title>فروشگاه من</title>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="topinfo">info</div>
-            <div class="logo"></div>
+            <div class="topinfo">
+                <ul class="accountlist">
+                    <li class="accountlist-item">
+                        <a href="" class="accountlist-link"><i class="fas fa-user"></i> ثبت نام</a>
+                    </li>
+                    <li class="accountlist-item">
+                        <a href="" class="accountlist-link"><i class="fas fa-lock"></i>ورود</a>
+                    </li>
+                </ul>
+                <div class="language">
+                    <img  class="fa-icon" src="images/icons/iran.png" alt="persian-flag">فارسی
+                     </div>
+
+            </div>
+            <div class="headerinfo">
+               
+
+            </div>
             <nav class="mainnav"></nav>
 
         </header>
