--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
 
             </div>
             <div class="headerinfo">
-               
+                <div class="logo">
+                    <img src="images/logo.png" alt="logo">
+                </div>
+                <div class="searchbox">
+                    <select name="" id="" class="categorylist">
+                        <option value="1">کامپیوتر</option>
+                        <option value="2">موبایل</option>
+                        <option value="3">پرینتر</option>
+                        <option value="4">اسکنر</option>
+
+                    </select>
+                    <input type="text" class="search-input" placeholder="متن مورد نظر را برای جستجو وارد نمایید">
+                    <a class="btnsearch" href="">
+                        <i class="fas fa-search"></i>
+                    </a>
+                   
+                </div>
+                <div class="contentme">contentme</div>
+                <div class="cant">cant</div>
 
             </div>
             <nav class="mainnav"></nav>
