completed contact me and add imagefile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/fontiran.css">
     <title>فروشگاه من</title>
 </head>
+
 <body>
     <div class="wrapper">
         <header class="header">
@@ -22,13 +24,23 @@
                     </li>
                 </ul>
                 <div class="language">
-                    <img  class="fa-icon" src="images/icons/iran.png" alt="persian-flag">فارسی
-                     </div>
+                    <img class="fa-icon" src="images/icons/iran.png" alt="persian-flag">فارسی
+                </div>
 
             </div>
             <div class="headerinfo">
                 <div class="logo">
-                    <img src="images/logo.png" alt="logo">
+
+                    <div class="logoicon">
+                        <i class="fas fa-shopping-cart cart1"></i>
+                    </div>
+                    <div class="info">
+                        <span class="myshop">فروشگــاه من</span>
+                        <br>
+                        <span>هرچیزی که می خواهید بخرید</span>
+
+                    </div>
+
                 </div>
                 <div class="searchbox">
                     <select name="" id="" class="categorylist">
@@ -42,20 +54,42 @@
                     <a class="btnsearch" href="">
                         <i class="fas fa-search"></i>
                     </a>
-                   
+
                 </div>
-                <div class="contentme">contentme</div>
-                <div class="cant">cant</div>
+                <div class="contactus">
+                    <div class="contactusicon">
+                        <i class="fas fa-headset"></i>
+                    </div>
+                    <div>
+                        <span>شماره تماس فروشگاه</span>
+                        <br>
+                        <span>شماره تلفن: 09122222333</span>
+                    </div>
+                </div>
+                <div class="contactus">
+                    <div class="contactusicon">
+                        <i class="fas fa-shopping-basket carticon"></i>
+                    </div>
+                    <div>
+                        <span>سبد خرید </span>
+                        <br>
+                        <span>دو خرید به مبلغ 150000 تومان</span>
+                    </div>
+                </div>
+
 
             </div>
-            <nav class="mainnav"></nav>
+            <nav class="mainnav">mainnav</nav>
 
         </header>
 
-        <main></main>
+        <main class="main">main</main>
 
-        <footer></footer>
+        <footer>
+
+        </footer>
 
     </div>
 </body>
+
 </html>
